rewrite stream logig
