# internal/cars/cars_routes.go
@@ -9,5 +9,7 @@ func RegisterCarsRoutes(r chi.Router, handler *CarHandler) {
 	r.Get("/cars/{id}/info", handler.GetCarInfo)
 
 	r.Get("/cars/{id}/stream", handler.CarStream)
+	r.Post("/cars/{id}/stream", handler.CarStreamUpload)
+	r.Post("/cars/{id}/stream/stop", handler.CarStreamStop)
 	r.Post("/car-actions", handler.CarActions)
 }
